--- a/index.html
+++ b/index.html
@@ -86,31 +86,31 @@
             console.log('CLIENT: service worker is not supported.');
         }
 
-        let deferredPrompt;
-        const btnAdd = document.getElementById('butInstall');
+        // let deferredPrompt;
+        // const btnAdd = document.getElementById('butInstall');
 
-        window.addEventListener('beforeinstallprompt', (e) => {
-            // Stash the event so it can be triggered later.
-            e.preventDefault();
-            deferredPrompt = e;
-        });
+        // window.addEventListener('beforeinstallprompt', (e) => {
+        //     // Stash the event so it can be triggered later.
+        //     e.preventDefault();
+        //     deferredPrompt = e;
+        // });
 
-        btnAdd.addEventListener('click', (e) => {
-            // hide our user interface that shows our A2HS button
-            btnAdd.style.display = 'none';
-            // Show the prompt
-            deferredPrompt.prompt();
-            // Wait for the user to respond to the prompt
-            deferredPrompt.userChoice
-                .then((choiceResult) => {
-                    if (choiceResult.outcome === 'accepted') {
-                        console.log('User accepted the A2HS prompt');
-                    } else {
-                        console.log('User dismissed the A2HS prompt');
-                    }
-                    deferredPrompt = null;
-                });
-        });
+        // btnAdd.addEventListener('click', (e) => {
+        //     // hide our user interface that shows our A2HS button
+        //     btnAdd.style.display = 'none';
+        //     // Show the prompt
+        //     deferredPrompt.prompt();
+        //     // Wait for the user to respond to the prompt
+        //     deferredPrompt.userChoice
+        //         .then((choiceResult) => {
+        //             if (choiceResult.outcome === 'accepted') {
+        //                 console.log('User accepted the A2HS prompt');
+        //             } else {
+        //                 console.log('User dismissed the A2HS prompt');
+        //             }
+        //             deferredPrompt = null;
+        //         });
+        // });
     </script>
 </body>
 
