--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <body>
     <div class="push-panel" id="push-panel">
         <div class="push-panel__content">
-            <img src="/design/images/notification-bell.svg" alt width="24" height="24">
-            <? // @TODO: добавить переводы ?>
+            <img src="img/notification-bell.svg" alt width="24" height="24">
             <div class="push-panel__title">
                 Хотите добавить <span>0629.com.ua</span> на главный экран и быть в курсе новостей?
             </div>
