update offline page

--- a/offline-page.html
+++ b/offline-page.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-wrapper">
         <div class="container hero">
-            <h1>Sorry, but you offline now :(</h1>
+            <h1>Sorry, but you are offline now :(</h1>
             <p>Please check out our latest news later:</p>
         </div>
     </div>
