--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+<input type="text" inputmode="numeric" pattern="[0-9]"/>
     <div class="push-panel" id="push-panel">
         <div class="push-panel__content">
             <img src="img/notification-bell.svg" alt width="24" height="24">
