add drilling demo markup

--- a/drilling/home.html
+++ b/drilling/home.html
@@ -131,7 +131,7 @@
         <div class="container">
           <h2 class="section-title section-title--lined">Свяжитесь с нами</h2>
           <div class="section-subtitle">Используйте любой удобный способ, чтобы связаться с нами</div>
-          <div class="row">
+          <div class="row contacts-row">
             <div class="col-12 col-md-4">
               <div class="contact-title">По телефонам</div>
               <div class="contact-item"><svg width="24px" height="24px" viewBox="0 0 384 384" xmlns="http://www.w3.org/2000/svg">
